--- a/index.html
+++ b/index.html
@@ -21,6 +21,39 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    <h1>Testando ExactTime</h1>
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
+        <div class="container">
+            <a href="#" class="navbar-brand">ExactTime</a>
+            <div id="navbar-items">
+                <div></div>
+                <form class="d-flex" id="search-form">
+                    <i class="bi bi-search primary-color"></i>
+                    <input type="search" class="form-control me-2" placeholder="Busque o seu Relógio..." aria-label="search">
+                    <button class="btn secondary-bg-color" type="submit">Pesquisar</button>
+                </form>
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-person"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-heart"></i>
+                        </a>
+                        <span class="qty-info">5</span>
+                    </li>
+                    <li class="nav-item" id="bag-item">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-bag"></i>
+                            <b>R$ 1290,12</b>
+                        </a>
+                        <span class="qty-info">8</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
