--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col-12 col-md-3">
                 <div class="card primary-bg-color">
-                    <img src="img/relogio2.png" alt="Relógio 2" class="card-img-top img-fluid">
+                    <img src="img/relogio5.png" alt="Relógio 2" class="card-img-top img-fluid">
                     <div class="card-body">
                         <p class="card-category secondary-color">Relógio</p>
                         <h5 class="card-title">Name it</h5>
@@ -179,6 +179,20 @@
                     </div>
                 </div>
             </div>
+            </div>
+        </div>
+    </div>
+    <!--Best Seller-->
+    <div class="container-fluid" id="bottom-banner">
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <p class="primary-color offer-subtitle">Desconto de até 75%</p>
+                <h2 class="light-color">Relógio Y</h2>
+                <p class="secondary-color">Presenteie o seu amor com esse relógio luxuoso</p>
+                <a href="#" class="btn btn-primary">Comprar agora</a>
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="img/relogio7.png" alt="Relógio Y">
             </div>
         </div>
     </div>
