Galeria de fotos

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
     </div>
-    <!--Best Seller-->
+    <!--Bottom Banner-->
     <div class="container-fluid" id="bottom-banner">
         <div class="row">
             <div class="col-12 col-md-8">
@@ -275,6 +275,17 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!--Gallery-->
+    <div class="container-fluid" id="gallery">
+        <div class="row">
+            <div class="col-6 col-md-2 image-container" id="insta1"></div>
+            <div class="col-6 col-md-2 image-container" id="insta2"></div>
+            <div class="col-6 col-md-2 image-container" id="insta3"></div>
+            <div class="col-6 col-md-2 image-container" id="insta4"></div>
+            <div class="col-6 col-md-2 image-container" id="insta5"></div>
+            <div class="col-6 col-md-2 image-container" id="insta6"></div>
         </div>
     </div>
 </body>
