--- a/index.html
+++ b/index.html
@@ -288,5 +288,34 @@
             <div class="col-6 col-md-2 image-container" id="insta6"></div>
         </div>
     </div>
+    <!--Footer-->
+    <footer class="footer">
+        <div class="container-fluid" id="footer-links-container">
+            <div class="row">
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Páginas</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="secondary-color">Home</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Categorias</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Promoções</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 footer-column" id="footer-center">
+                    <h3>ExactTime</h3>
+                    <p class="secondary-color">Alguma dúvida? Call us.</p>
+                    <p class="store-phone"><i class="bi bi-telephone"></i> (55) 98409-1612</p>
+                </div>
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Informações</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="secondary-color">Política de Privacidade</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Política de Entrega</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Rastreie o seu Pedido</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
