--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
     </div>
     <!--Footer-->
-    <footer class="footer">
+    <footer id="footer">
         <div class="container-fluid" id="footer-links-container">
             <div class="row">
                 <div class="col-12 col-md-4 footer-column">
