Finalizando CSS do footer

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <form class="d-flex" id="news-form">
                         <i class="bi bi-envelope primary-color"></i>
                         <input type="email" class="form-control me-2" placeholder="Insira seu Email...">
-                        <button class="btn secondary-bg-color" type="submit">Enviar</button>
+                        <button class="btn primary-color secondary-bg-color" type="submit">Enviar</button>
                     </form>
                 </div>
             </div>
